--- a/src/Buttons/button.css
+++ b/src/Buttons/button.css
@@ -5,3 +5,15 @@
 .button-animation:hover {
   background: linear-gradient(104.65deg, #874ed2 70.38%, #fd705e 105.23%);
 }
+
+.large-button{
+  padding: 1rem;
+  font-size: 42px;
+  border-radius: 1rem;
+  color: white;
+  box-shadow: 0px 24px 20px 5px rgba(0, 0, 0, 0.15);
+}
+
+.large-button:hover{
+  box-shadow: none;
+}
