The home page is complete and responsive.  I added a components file and passed props to the large button so it can be resused.  Next I will move onto the form selection page.

--- a/src/Components/Buttons/button.css
+++ b/src/Components/Buttons/button.css
@@ -3,7 +3,7 @@
 }
 
 .button-animation:hover {
-  background: linear-gradient(104.65deg, #874ed2 70.38%, #fd705e 105.23%);
+  background: linear-gradient(105.89deg, #874ED2 -3.72%, #FD705E 95.79%);
 }
 
 .large-button{
