--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -482,8 +482,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 0px;
 }
 
-.top-64 {
-  top: 16rem;
+.top-60 {
+  top: 15rem;
 }
 
 .bottom-3 {
@@ -508,6 +508,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bottom-0 {
   bottom: 0px;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .float-left {
@@ -558,8 +562,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.75rem;
 }
 
-.h-screen {
-  height: 100vh;
+.h-\[80\%\] {
+  height: 80%;
 }
 
 .h-12 {
@@ -674,10 +678,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bg-cover {
   background-size: cover;
-}
-
-.bg-center {
-  background-position: center;
 }
 
 .py-1 {
