--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -482,8 +482,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 0px;
 }
 
-.top-60 {
-  top: 15rem;
+.bottom-48 {
+  bottom: 12rem;
 }
 
 .bottom-3 {
@@ -498,12 +498,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 33.333333%;
 }
 
-.top-56 {
-  top: 14rem;
-}
-
-.left-1\/2 {
-  left: 50%;
+.bottom-80 {
+  bottom: 20rem;
 }
 
 .bottom-0 {
@@ -562,8 +558,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.75rem;
 }
 
-.h-\[80\%\] {
-  height: 80%;
+.h-screen {
+  height: 100vh;
 }
 
 .h-12 {
@@ -680,6 +676,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-size: cover;
 }
 
+.bg-center {
+  background-position: center;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -700,13 +700,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.25rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .text-left {
@@ -859,12 +862,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 768px) {
-  .md\:top-56 {
-    top: 14rem;
+  .md\:bottom-48 {
+    bottom: 12rem;
   }
 
-  .md\:top-48 {
-    top: 12rem;
+  .md\:left-1\/2 {
+    left: 50%;
   }
 
   .md\:h-16 {
@@ -877,11 +880,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:gap-48 {
     gap: 12rem;
-  }
-
-  .md\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
   }
 
   .md\:text-5xl {
@@ -897,5 +895,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:bottom-8 {
+    bottom: 2rem;
+  }
+
+  .lg\:bottom-7 {
+    bottom: 1.75rem;
   }
 }
