I added funtionality to the buttons on the home page but still need to add the focus aspect with useEffect.

--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -482,10 +482,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 0px;
 }
 
-.bottom-48 {
-  bottom: 12rem;
-}
-
 .bottom-3 {
   bottom: 0.75rem;
 }
@@ -502,12 +498,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: 20rem;
 }
 
+.bottom-48 {
+  bottom: 12rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
 
-.top-10 {
-  top: 2.5rem;
+.top-24 {
+  top: 6rem;
 }
 
 .left-\[5\%\] {
@@ -578,12 +578,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 3rem;
 }
 
-.h-\[80\%\] {
-  height: 80%;
-}
-
-.h-full {
-  height: 100%;
+.h-1\/3 {
+  height: 33.333333%;
 }
 
 .w-full {
@@ -648,16 +644,12 @@ Ensure the default browser behavior of the `hidden` attribute.
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.grid-flow-row {
-  grid-auto-flow: row;
-}
-
 .grid-flow-col {
   grid-auto-flow: column;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.flex-col {
+  flex-direction: column;
 }
 
 .place-content-center {
@@ -668,8 +660,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .gap-16 {
@@ -703,6 +703,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(135 78 210 / var(--tw-border-opacity));
 }
 
+.border-orange {
+  --tw-border-opacity: 1;
+  border-color: rgb(253 112 94 / var(--tw-border-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -719,6 +724,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bg-center {
   background-position: center;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .py-1 {
@@ -741,6 +754,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.25rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -751,6 +769,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-12 {
   padding-bottom: 3rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .text-left {
@@ -903,12 +925,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 768px) {
-  .md\:bottom-48 {
-    bottom: 12rem;
-  }
-
   .md\:left-1\/2 {
     left: 50%;
+  }
+
+  .md\:bottom-48 {
+    bottom: 12rem;
   }
 
   .md\:h-16 {
@@ -917,6 +939,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:w-16 {
     width: 4rem;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
   }
 
   .md\:gap-48 {
