I finished the first form section except for the next button.  I made some changes to the css from the figma design for convenience and better code.  The figma design was a little sloppy regarding the cell phone part.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -1,6 +1,7 @@
 .form{
     display: grid;
     margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
 }
 
 .section{
@@ -41,4 +42,14 @@
 .input:focus{
     outline-offset: 2px;
     outline-color:#fd705e;
+}
+
+.input[type="date"]{
+    color:#874ed2;
+    padding-left: 1.5rem;
+}
+
+.input[type="radio"]:checked{
+    background-color: #874ed2;
+    
 }
