--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -526,12 +526,33 @@ Ensure the default browser behavior of the `hidden` attribute.
   float: left;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
 }
 
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
 .ml-1 {
@@ -582,6 +603,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 33.333333%;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -616,8 +641,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 14rem;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
 .w-\[90\%\] {
   width: 90%;
+}
+
+.w-\[14\.3\%\] {
+  width: 14.3%;
 }
 
 .origin-top-right {
@@ -676,6 +709,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .justify-evenly {
   justify-content: space-evenly;
 }
@@ -699,6 +736,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-r-md {
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
+}
+
+.rounded-r-lg {
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
 
 .border-\[1px\] {
@@ -734,9 +776,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
-.bg-orange {
+.bg-purple {
   --tw-bg-opacity: 1;
-  background-color: rgb(253 112 94 / var(--tw-bg-opacity));
+  background-color: rgb(135 78 210 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -749,6 +791,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .p-7 {
   padding: 1.75rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-4 {
@@ -765,10 +811,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .p-3 {
   padding: 0.75rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .p-1\.5 {
@@ -980,6 +1022,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(253 112 94 / var(--tw-border-opacity));
 }
 
+.hover\:text-purple:hover {
+  --tw-text-opacity: 1;
+  color: rgb(135 78 210 / var(--tw-text-opacity));
+}
+
 .hover\:drop-shadow-none:hover {
   --tw-drop-shadow: drop-shadow(0 0 #0000);
   -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1010,6 +1057,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:bottom-48 {
     bottom: 12rem;
+  }
+
+  .md\:hidden {
+    display: none;
   }
 
   .md\:h-16 {
