--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -502,6 +502,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: 12rem;
 }
 
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -719,6 +727,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-16 {
