I finished the next button and all the css. I made it look as nice as possible with grid.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -1,5 +1,6 @@
 .form{
     display: grid;
+    place-content: center;
     margin-top: 1.25rem;
     margin-bottom: 1.25rem;
 }
@@ -7,6 +8,10 @@
 .section{
     display: grid;
     place-content: center;
+}
+
+.section-rows{
+    grid-row: span 4 / span 3;
 }
 
 .section-div{
