--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -510,6 +510,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 0.5rem;
 }
 
+.top-4 {
+  top: 1rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -733,8 +737,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 1rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .gap-16 {
@@ -1080,8 +1084,64 @@ Ensure the default browser behavior of the `hidden` attribute.
     bottom: 12rem;
   }
 
-  .md\:hidden {
-    display: none;
+  .md\:order-9 {
+    order: 9;
+  }
+
+  .md\:order-2 {
+    order: 2;
+  }
+
+  .md\:order-1 {
+    order: 1;
+  }
+
+  .md\:order-3 {
+    order: 3;
+  }
+
+  .md\:order-4 {
+    order: 4;
+  }
+
+  .md\:order-6 {
+    order: 6;
+  }
+
+  .md\:order-5 {
+    order: 5;
+  }
+
+  .md\:order-7 {
+    order: 7;
+  }
+
+  .md\:order-8 {
+    order: 8;
+  }
+
+  .md\:col-start-2 {
+    grid-column-start: 2;
+  }
+
+  .md\:row-span-1 {
+    grid-row: span 1 / span 1;
+  }
+
+  .md\:row-span-4 {
+    grid-row: span 4 / span 4;
+  }
+
+  .md\:row-span-2 {
+    grid-row: span 2 / span 2;
+  }
+
+  .md\:row-span-3 {
+    grid-row: span 3 / span 3;
+  }
+
+  .md\:row-start-1 {
+    grid-row-start: 1;
   }
 
   .md\:h-16 {
@@ -1090,6 +1150,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:w-16 {
     width: 4rem;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -1132,5 +1196,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:bottom-7 {
     bottom: 1.75rem;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 }
