I finished all the css problems with form 1 and the first part of the document including the picture size.  The only thing left to do is add the hover tip boxes.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -29,6 +29,11 @@
     line-height: 1.75rem;
 }
 
+.photo{
+    width: 113.5px;
+    height: 151.2px;
+}
+
 .input-div{
     display: grid;
     width: 20rem;
