I added a tips content component and entered the information.  The form step one is now complete except for the photo button.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -21,6 +21,24 @@
     margin: 2.5rem 0 .5rem .5rem;
 }
 
+.h1{
+    display: grid;
+    place-content: center;
+    color: #874ed2;
+    font-size: 2rem;
+    line-height: 1.75rem;
+}
+
+.tips-h2{
+    display: grid;
+    place-content: start;
+    color: #874ed2;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+}
+
 .h2{
     display: grid;
     place-content: center;
