I found out that only jpeg and png work with the onchange event for the photo upload.  It works well but now need to store it in the Resume Reducer to pass it to the page component.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -82,6 +82,10 @@
     padding-left: 1.5rem;
 }
 
+/* .input[type="file"]{
+  opacity: 0;
+} */
+
 .input[type="radio"]:checked{
     background-color: #874ed2;   
 }
