--- a/src/Components/Buttons/button.css
+++ b/src/Components/Buttons/button.css
@@ -12,6 +12,23 @@
   box-shadow: 0px 24px 20px 5px rgba(0, 0, 0, 0.15);
 }
 
+.circle-button{
+  border-radius: 9999px;
+  display: grid;
+  place-content: center;
+  color: white;
+  box-shadow: 0px 10px 10px 3px rgba(0, 0, 0, 0.15);
+  font-weight: 800;
+  font-size: 1.25rem/* 20px */;
+  line-height: 1.75rem/* 28px */;
+  padding: 0.125rem;
+  width: 2rem;
+}
+
 .button:hover{
+  box-shadow: none;
+}
+
+.circle-button:hover{
   box-shadow: none;
 }
