--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -57,6 +57,11 @@
     width: 20rem;
 }
 
+.date-input-div{
+    display: grid;
+    width: 9rem;
+}
+
 .input{
     background-color: rgba(196, 196, 196, 0.2);
     padding: .25rem 0 .25rem .5rem;
@@ -78,13 +83,8 @@
 }
 
 .input[type="date"]{
-    /* color:#874ed2; */
     padding-left: 1.5rem;
 }
-
-/* .input[type="file"]{
-  opacity: 0;
-} */
 
 .input[type="radio"]:checked{
     background-color: #874ed2;   
@@ -93,8 +93,7 @@
 .page-div{
     margin: 2rem;
     background-color: white;
-    height: 90%;
-    /* width: 93%; */
+    height: 95%;
 }
 
 .resume-section{
