I finished the map functions and css for the lists.  Everything is working great but still need to add the delete function.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -127,6 +127,7 @@
     display: grid;
     grid-column: span 9 / span 9;
     place-content: center;
+    height: 25px;
 }
 
 .resume-history-text-div{
