--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -601,6 +601,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.25rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-0\.5 {
   margin-top: 0.125rem;
 }
