--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -94,6 +94,7 @@
     margin: 2rem;
     background-color: white;
     height: 95%;
+    padding-bottom: 1.25rem;
 }
 
 .resume-section{
@@ -148,4 +149,43 @@
     line-height: 1.25rem;
     border-radius: 0.375rem;
     padding: .5rem;
+}
+
+/* Form3 css */
+.text-area{
+    min-width: 18rem;
+    height: 16rem;
+    background: #f7f7f7;
+}
+
+
+.time-div{
+    display: flex;
+    gap: 0.5rem;
+    color:#874ed2;
+}
+
+.drop-down{
+    background: #fafafa;
+    text-align: center;
+    width: 5rem;
+    height: 2rem;
+    margin-right: .5rem;
+}
+
+.select-drop-down-div{
+    display: flex;
+    gap: 2.5rem;
+    width: 100%;
+}
+
+.family-drop-down-div{
+    color: #874ed2;
+    margin-bottom: 1.5rem;
+}
+
+@media (min-width: 768px) {
+    .text-area {
+        width: 32rem;
+    }
 }
