I added the next section of resumePage 2 for the form3 component.  All the css is done but I still need to clean the code and dry it while making more components. Next I will create the state for the rest of the Resume.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -107,7 +107,14 @@
 .resume-history-div{
     display: grid;
     grid-template-columns: repeat(12, minmax(0, 1fr));
-    border-top-width: 2px;
+    border-bottom-width: 2px;
+}
+
+.resume-history-header-div{
+    display: grid;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    border-bottom-width: 2px;
+    border-style: double;
 }
 
 .resume-history-year-div{
