I finished the Form4 and Form5 components with cellphone compatibility.  I still have to create the combined state.  The next step will be the combined tips section.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -178,6 +178,7 @@
     width: 5rem;
     height: 2rem;
     margin-right: .5rem;
+    margin-top: .5rem;
 }
 
 .select-drop-down-div{
@@ -194,5 +195,8 @@
 @media (min-width: 768px) {
     .text-area {
         width: 32rem;
+    }
+    .drop-down {
+        margin-top: 0;
     }
 }
