I fixed the css for forms 1 and 6 as well as fixed the progress bar css. Everything is working properly but the buttons in Form 6 still need functionality.

--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -836,6 +836,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .place-content-center {
   place-content: center;
 }
@@ -1122,6 +1126,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-\[\.125rem\] {
   padding-bottom: .125rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .pt-5 {
@@ -1520,5 +1528,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 @media (min-width: 1280px) {
   .xl\:block {
     display: block;
+  }
+
+  .xl\:flex {
+    display: flex;
+  }
+
+  .xl\:w-1\/2 {
+    width: 50%;
   }
 }
