I added an F3Input and adjust the css for the size of the inputs for the education certs and work to make it look nicer.  I also added a max length for the inputs.  I still need to add it to the rest of the inputs.  I still need to create the print function and save function.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -133,17 +133,18 @@
 
 .resume-history-title-div{
     display: grid;
-    grid-column: span 9 / span 9;
     place-content: center;
-    height: 25px;
+    grid-column: span 9 / span 9;
+    min-height: 30px;
 }
 
 .resume-history-text-div{
     display: grid;
+    align-items: center;
     grid-column: span 9 / span 9;
     padding-left: .75rem;
     padding-right: .75rem;
-    height: 25px;
+    min-height: 30px;
 }
 
 .tipbox{
