--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -202,3 +202,38 @@
         margin-top: 0;
     }
 }
+
+@media print {
+    body{
+        margin: 0;
+        background-color: #fff;
+        float: none;
+        width: 100%;
+    }
+    
+    @page { 
+       margin: 0;
+    }
+    
+    #resume-header, #button-group{
+        display: none !important;
+    }
+
+    #resume-page-1-bg, #resume-page-2-bg{
+        margin: 0;
+        padding: 0;
+    }
+
+    #resume-page-1, #resume-page-2{
+        display: block !important;
+        height: 1400px;
+        width: 850px;
+        padding: 0;
+        margin: 0;
+        break-inside: avoid !important;
+    }
+
+    /* div.card-wrapper{
+        display: block;
+    } */
+}
