I finished the functionality for the resume.  I need to adjust the css for printing for the letter size and no page break for the additional information section. The certificate section now has a max of only 7 items now also for spacing.

--- a/src/Components/Resume/resume.css
+++ b/src/Components/Resume/resume.css
@@ -91,9 +91,9 @@
 }
 
 .page-div{
-    margin: 2rem;
+    margin: 1rem;
     background-color: white;
-    height: 95%;
+    height: 97%;
     padding-bottom: 1.25rem;
 }
 
@@ -162,7 +162,7 @@
 /* Form3 css */
 .text-area{
     min-width: 18rem;
-    height: 16rem;
+    height: 15rem;
     background: #f7f7f7;
     padding: 1rem;
 }
@@ -230,7 +230,8 @@
         width: 100%;
         padding: 0;
         margin: 0;
-        page-break-after: page !important;
+        clear: both;
+        page-break-inside: avoid !important;
     }
 
     #resume-page-1 {
