--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -615,12 +615,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.25rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .mt-1 {
@@ -645,10 +653,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .ml-\[5\%\] {
   margin-left: 5%;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
 }
 
 .mt-10 {
@@ -721,6 +725,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-3 {
   height: 0.75rem;
+}
+
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .h-16 {
@@ -1057,6 +1067,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-purple {
   --tw-bg-opacity: 1;
   background-color: rgb(135 78 210 / var(--tw-bg-opacity));
+}
+
+.bg-lightgray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
 }
 
 .bg-skillsheetgray {
@@ -1627,6 +1642,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .xl\:w-1\/2 {
     width: 50%;
+  }
+
+  .xl\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .xl\:w-2\/3 {
