I made one component called Header for the Resume and SkillSheet and added props to it.  I then deleted the ResumeHeader and removed the TipsHeader icon.

--- a/src/Components/SkillSheet/skillsheet.css
+++ b/src/Components/SkillSheet/skillsheet.css
@@ -83,13 +83,6 @@
     background-size: contain;
 }
 
-.circle{
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    background-color: black;
-}
-
 @media print {
     
     html, body{
@@ -121,5 +114,9 @@
         margin: 0 !important;
         clear: both;
         page-break-inside: avoid !important;
+    }
+    .gray{
+        background-image: url(../../images/bg-gray.png);
+        background-size: contain;
     }    
 }
